--- a/index.html
+++ b/index.html
@@ -15,8 +15,7 @@
                 <div class="px-8 py-8">
                         <div class="flex mb-1 justify-end">
                                 <div class="output">
-                                        <div class="previousNumber">
-                                        </div>
+                                        <div class="previousNumber"></div>
                                         <div class="currentNumber">0</div>
 
                                 </div>
@@ -27,6 +26,24 @@
                                 <button class="number">8</button>
                                 <button class="number">9</button>
                                 <button class="operator">/</button>
+                        </div>
+                        <div class="flex mb-1">
+                                <button class="number">4</button>
+                                <button class="number">5</button>
+                                <button class="number">6</button>
+                                <button class="operator">x</button>
+                        </div>
+                        <div class="flex mb-1">
+                                <button class="number">1</button>
+                                <button class="number">2</button>
+                                <button class="number">3</button>
+                                <button class="operator">-</button>
+                        </div>
+                        <div class="flex mb-1">
+                                <button class="decimal">.</button>
+                                <button class="number">0</button>
+                                <button class="equal">=</button>
+                                <button class="operator">+</button>
                         </div>
 
                 </div>
